structmeta-tests/tests/compile_fail/struct_meta/missing_unnamed_argument.rs
#[structmeta_tests::attr_requred_unnamed_param2(10)]
fn my_func() {}

fn main() {}
