structmeta-tests/tests/compile_fail/struct_meta/missing_unnamed_argument.stderr
error: expected least 2 arguments but 1 argument was supplied
 --> $DIR/missing_unnamed_argument.rs:1:1
  |
1 | #[structmeta_tests::attr_requred_unnamed_param2(10)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
